k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${APP}
  labels:
    app: ${APP}
  namespace: ${NAMESPACE}
spec:
  type: NodePort
  selector:
    app: ${APP}
  ports:
    - port: ${PORT}
